@startuml
hide circle
skinparam shadowing false
skinparam linetype ortho
title ERD - He thong tuyen dung IT EffortIT

entity "NguoiDung" as NguoiDung {
  * _id : ObjectId <<PK>>
  --
  email
  matKhauHash
  hoTen
  soDienThoai
  vaiTro
  trangThai
  resetPasswordTokenHash
  resetPasswordExpires
  ngayTao
}

entity "UngVien" as UngVien {
  * _id : ObjectId <<PK>>
  --
  maNguoiDung : ObjectId <<FK>>
  viTriMongMuon
  namKinhNghiem
  diaChi
  tomTat
}

entity "NhaTuyenDung" as NhaTuyenDung {
  * _id : ObjectId <<PK>>
  --
  maNguoiDung : ObjectId <<FK>>
  tenCongTy
  logo
  website
  nganh
  quyMo
  diaChi
  moTa
  trangThaiDuyet
}

entity "TinTuyenDung" as TinTuyenDung {
  * _id : ObjectId <<PK>>
  --
  maNhaTuyenDung : ObjectId <<FK>>
  tieuDe
  moTa
  yeuCau
  quyenLoi
  luongMin
  luongMax
  hinhThuc
  capBac
  diaChi
  anhDaiDien
  trangThai
  hanNop
}

entity "DanhMucKyNang" as KyNang {
  * _id : ObjectId <<PK>>
  --
  ten
  nhom
  moTa
  trangThai
}

entity "HoSoNangLuc" as HoSoNangLuc {
  * _id : ObjectId <<PK>>
  --
  maUngVien : ObjectId <<FK>>
  tieuDe
  hoTenHienThi
  fileCvData
  fileCvText
  loaiHoSo
  cvChinh
  congKhai
  kyNangLapTrinh
  kinhNghiemLam
  duAnChiTiet
}

entity "HoSoUngTuyen" as HoSoUngTuyen {
  * _id : ObjectId <<PK>>
  --
  maUngVien : ObjectId <<FK>>
  maTinTuyenDung : ObjectId <<FK>>
  maHoSoNangLuc : ObjectId <<FK>>
  trangThai
  ngayNop
  ghiChu
}

entity "LichPhongVan" as LichPhongVan {
  * _id : ObjectId <<PK>>
  --
  maHoSoUngTuyen : ObjectId <<FK>>
  thoiGianBatDau
  thoiGianKetThuc
  hinhThuc
  diaChi
  linkHop
  trangThai
  ketQua
  ghiChu
}

entity "LichSuHoSoUngTuyen" as LichSu {
  * _id : ObjectId <<PK>>
  --
  maHoSoUngTuyen : ObjectId <<FK>>
  trangThaiCu
  trangThaiMoi
  ghiChu
  ngayTao
}

entity "ThongBao" as ThongBao {
  * _id : ObjectId <<PK>>
  --
  maNguoiNhan : ObjectId <<FK>>
  loai
  tieuDe
  noiDung
  lienKet
  daDoc
  ngayTao
}

entity "CuocTroChuyen" as CuocTroChuyen {
  * _id : ObjectId <<PK>>
  --
  thanhVien : ObjectId[]
  loai
  maHoSoUngTuyen
  maTinTuyenDung
  capNhatLuc
}

entity "TinNhan" as TinNhan {
  * _id : ObjectId <<PK>>
  --
  maCuocTroChuyen : ObjectId <<FK>>
  maNguoiGui : ObjectId <<FK>>
  noiDung
  tepDinhKem
  daDoc
  ngayTao
}

entity "DanhGiaCongTy" as DanhGia {
  * _id : ObjectId <<PK>>
  --
  maNhaTuyenDung : ObjectId <<FK>>
  maUngVien : ObjectId <<FK>>
  diem
  noiDung
  trangThai
  ngayTao
}

entity "ViecLamDaLuu" as SavedJob {
  * _id : ObjectId <<PK>>
  --
  maUngVien : ObjectId <<FK>>
  maTinTuyenDung : ObjectId <<FK>>
  ngayLuu
}

NguoiDung ||--o| UngVien : so huu
NguoiDung ||--o| NhaTuyenDung : so huu
NhaTuyenDung ||--o{ TinTuyenDung : dang
TinTuyenDung }o--o{ KyNang : yeu cau
UngVien ||--o{ HoSoNangLuc : tao
UngVien ||--o{ HoSoUngTuyen : nop
TinTuyenDung ||--o{ HoSoUngTuyen : nhan
HoSoNangLuc ||--o{ HoSoUngTuyen : su dung
HoSoUngTuyen ||--o{ LichSu : ghi nhan
HoSoUngTuyen ||--o{ LichPhongVan : sap lich
NguoiDung ||--o{ ThongBao : nhan
CuocTroChuyen ||--o{ TinNhan : gom
NguoiDung ||--o{ TinNhan : gui
NhaTuyenDung ||--o{ DanhGia : duoc danh gia
UngVien ||--o{ DanhGia : viet
UngVien ||--o{ SavedJob : luu
TinTuyenDung ||--o{ SavedJob : duoc luu
@enduml

